[project]
name = "pytest-result-sender"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "余豪", email = "yuhao04@bilibili.com"},
]
dependencies = ["pytest>=8.3.3", "requests>=2.32.3"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
    \.git
    | \.hg
    | \.tox
    | venv
    | buck-out
    | build
    | dist
)/
'''

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 ."
]}

test = "pytest"